--- a/AAPL.html
+++ b/AAPL.html
@@ -56,7 +56,7 @@ h2.title{
           <h3>GOOG</h3>
         </div>
         <div class="w3-clear"></div>
-        <h4>Alphabet Inc.</h4>
+        <h4>Alphabet Incorporated</h4>
       </div>
     </div>
 
